# bad-adit

./: CLAUDE.md  DESIGN.md  IMPLEMENTATION.md  LICENSE  README.md  TESTING.md  index.html  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  config.rs  error_log.rs  format.rs  lib.rs  main.rs  notify.rs  proxy.rs  ssh.rs  stats.rs  tray.rs  tunnel.rs
src-tauri/tests/: integration.rs
src/views/: ErrorConsole.ts  TunnelForm.ts  TunnelList.ts  TunnelStats.ts
